Fix proposal pagination z-index and scroll on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -307,6 +307,7 @@ footer {
       padding-left: 10px;
       border-left: 5px solid #ddd;
       background-color: #fff;
+      z-index: 2;
       -webkit-transition: all 500ms ease;
       -moz-transition: all 500ms ease;
       -ms-transition: all 500ms ease;
